cedar/test/corpus/prism/hastag.txt
================================================================================
hastag
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/hastag.cedar#L2-L14

permit (
  principal is User,
  action == Action::"writeDoc",
  resource is Document
)
when
{
  resource.owner == principal ||
  (principal.jobLevel > 6 &&
   resource.hasTag("write") &&
   principal.hasTag("write") &&
   resource.getTag("write").containsAny(principal.getTag("write")))
};

--------------------------------------------------------------------------------
(policy_set
  (comment)
  (policy
    (effect)
    (scope
      (principal
        (scope_constraint
          (name
            (identifier))))
      (action
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (resource
        (scope_constraint
          (name
            (identifier)))))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))
              (unary_expression
                (member_expression
                  (variable)))))
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (parenthesized_expression
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (variable)
                                (field_access
                                  (identifier))))
                            (unary_expression
                              (member_expression
                                (integer))))
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (variable)
                                (method_call
                                  (identifier)
                                  (expression
                                    (or_expression
                                      (and_expression
                                        (relation_expression
                                          (unary_expression
                                            (member_expression
                                              (string
                                                (string_content))))))))))))
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (variable)
                                (method_call
                                  (identifier)
                                  (expression
                                    (or_expression
                                      (and_expression
                                        (relation_expression
                                          (unary_expression
                                            (member_expression
                                              (string
                                                (string_content))))))))))))
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (variable)
                                (method_call
                                  (identifier)
                                  (expression
                                    (or_expression
                                      (and_expression
                                        (relation_expression
                                          (unary_expression
                                            (member_expression
                                              (string
                                                (string_content)))))))))
                                (method_call
                                  (identifier)
                                  (expression
                                    (or_expression
                                      (and_expression
                                        (relation_expression
                                          (unary_expression
                                            (member_expression
                                              (variable)
                                              (method_call
                                                (identifier)
                                                (expression
                                                  (or_expression
                                                    (and_expression
                                                      (relation_expression
                                                        (unary_expression
                                                          (member_expression
                                                            (string
                                                              (string_content))))))))))))))))))))))))))))))))
