cedar/test/corpus/prism/identifier.txt
================================================================================
identifier
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/identifier.cedar#L1-L7

// poorly formed: This identifier is reserved and cannot be used: XX
permit (principal, action, resource)
when { resource.ip == ip("127.0.0.1") }
when { resource.decimal == decimal("0.1234") }
when { resource.if.in.has.then.else.like.is.true.false }
when { resource.principal.resource.action.context }
when { resource.permit.forbid.when.unless };

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))
    (condition
      (binary_expression
        (member_expression
          (variable)
          (field_access
            (identifier)))
        (extension_call
          (name
            (identifier))
          (string
            (string_content)))))
    (condition
      (binary_expression
        (member_expression
          (variable)
          (field_access
            (identifier)))
        (extension_call
          (name
            (identifier))
          (string
            (string_content)))))
    (condition
      (member_expression
        (variable)
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))))
    (condition
      (member_expression
        (variable)
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))))
    (condition
      (member_expression
        (variable)
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))
        (field_access
          (identifier))))))
