cedar/test/corpus/prism/quotes.txt
================================================================================
quotes
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/quotes.cedar#L1-L12

// you "must" be 54" tall to ride (wink)
@id("54\" rule") // 54" is 4' 6"
forbid (principal, action, resource)
when
{
  resource.restriction == "54\"" &&
  principal.height < 54 &&
  principal.attrSet.contains({
    "key": "height", 
    "values": ["54\"", "4' 6\""]
  })
};

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)
        (escape_sequence)
        (string_content)))
    (comment)
    (effect)
    (scope
      (principal)
      (action)
      (resource))
    (condition
      (binary_expression
        (binary_expression
          (binary_expression
            (member_expression
              (variable)
              (field_access
                (identifier)))
            (string
              (string_content)
              (escape_sequence)))
          (binary_expression
            (member_expression
              (variable)
              (field_access
                (identifier)))
            (integer)))
        (member_expression
          (variable)
          (field_access
            (identifier))
          (method_call
            (identifier)
            (record_expression
              (record_entry
                (string
                  (string_content))
                (string
                  (string_content)))
              (record_entry
                (string
                  (string_content))
                (set_expression
                  (string
                    (string_content)
                    (escape_sequence))
                  (string
                    (string_content)
                    (escape_sequence)))))))))))
