cedar/test/corpus/prism/template.txt
================================================================================
template
================================================================================

// see https://docs.cedarpolicy.com/policies/templates.html
permit (
  principal in ?principal,
  action in [Action::"comment"], 
  resource in ?resource
)
unless {
  context.readOnly == true
};

--------------------------------------------------------------------------------
(policy_set
  (comment)
  (policy
    (effect)
    (scope
      (principal
        (scope_constraint
          (slot
            (identifier))))
      (action
        (scope_constraint
          (entity_list
            (entity_reference
              (identifier)
              (string
                (string_content))))))
      (resource
        (scope_constraint
          (slot
            (identifier)))))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))
              (unary_expression
                (member_expression
                  (true))))))))))
