cedar/test/corpus/regressions/annotation_open.txt
================================================================================
annotation_open
================================================================================

@id(

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (annotation
      (identifier))
    (ERROR)
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
