cedar/test/corpus/regressions/annotation_unclosed.txt
================================================================================
annotation_unclosed
================================================================================

@id("x"

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (annotation
      (identifier))
    (ERROR
      (string
        (string_content)))
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
