cedar/test/corpus/regressions/expression_call.txt
================================================================================
expression_call
================================================================================

permit () when { ip(

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (condition
      (extension_call
        (name
          (identifier))
        (extension_call
          (name
            (identifier))
          (variable)
          (variable)
          (variable))
        (MISSING ")")))))
