cedar/test/corpus/regressions/expression_field.txt
================================================================================
expression_field
================================================================================

permit () when { context.

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (condition
      (member_expression
        (variable)
        (method_call
          (identifier)
          (variable)
          (variable)
          (variable))))))
