cedar/test/corpus/regressions/expression_operator.txt
================================================================================
expression_operator
================================================================================

permit () when { context.n ==

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))))))))
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
