cedar/test/corpus/regressions/expression_unary.txt
================================================================================
expression_unary
================================================================================

forbid () when { !

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (condition
      (unary_expression)))
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
