cedar/test/corpus/regressions/incomplete_entity_path.txt
================================================================================
incomplete_entity_path
================================================================================

permit (principal == User::

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (scope
      (principal
        (scope_constraint
          (entity_reference
            (identifier))))))
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
