cedar/test/corpus/regressions/incomplete_scope_open.txt
================================================================================
incomplete_scope_open
================================================================================

forbid (

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (ERROR
      (identifier))
    (scope
      (principal)
      (action)
      (resource))))
