cedar/test/corpus/regressions/incomplete_scope_operator.txt
================================================================================
incomplete_scope_operator
================================================================================

permit (principal ==

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (scope
      (principal
        (scope_constraint))))
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
