cedar/test/corpus/regressions/incomplete_template.txt
================================================================================
incomplete_template
================================================================================

template(?x: Long

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (template_declaration
      (slot
        (identifier)
        (type_reference
          (name
            (identifier)))))
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
