cedar/test/corpus/regressions/incomplete_when.txt
================================================================================
incomplete_when
================================================================================

permit () when

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (condition))
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
