cedar/test/corpus/regressions/incomplete_when_block.txt
================================================================================
incomplete_when_block
================================================================================

permit () when {

permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (condition))
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
