cedar/test/corpus/regressions/strings.txt
================================================================================
strings
================================================================================

permit (principal == User::"ali

permit (principal == Group::"admins", action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (scope
      (principal
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (ERROR
        (identifier))
      (action)
      (resource))))
