cedar/test/corpus/regressions/terminators.txt
================================================================================
terminators
================================================================================

permit (principal, action, resource)

forbid (principal, action, resource)
when { true }

@id("still-parses")
permit (principal, action, resource);

--------------------------------------------------------------------------------

(policy_set
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource)))
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))
    (condition
      (true)))
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
